--- a/RUP/src/rup/personalpage.form
+++ b/RUP/src/rup/personalpage.form
@@ -25,8 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="61" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" pref="130" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -146,13 +146,9 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="94" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -163,25 +159,26 @@
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jLabel5" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton1" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton2" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton3" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton4" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton5" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jLabel6" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton6" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton7" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton8" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton9" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButton10" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabel5" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton1" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton2" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton3" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton4" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton5" alignment="1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabel6" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton6" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton7" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton8" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton9" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRadioButton10" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" pref="154" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
